# splatbus

./: .gitmodules  README.md  pyproject.toml  setup.py
clients/OpenGL-client/: 3dgs_render_loop.py  4dgs_render_loop.py  README.md  main.py  pyproject.toml  render_loop.py  viewer.py
clients/Unity-client/: .gitignore  README.md
clients/Unity-client/PluginSource/include/: RenderAPI.h
clients/Unity-client/PluginSource/projects/CMakeWindows/: CMakeLists.txt
clients/Unity-client/PluginSource/projects/GNUMake/: CMakeLists.txt  Makefile
clients/Unity-client/PluginSource/src/: RenderAPI.cpp  RenderAPI_OpenGLCoreES.cpp  RenderingPlugin.cpp
clients/Unity-client/UnityProject/Assets/Materials/: GaussianSplattingCamera.mat  GaussianSplattingCamera.shader  GaussianSplattingCameraDepth.mat
clients/Unity-client/UnityProject/Assets/Scenes/: UnityViewerExample.unity
clients/Unity-client/UnityProject/Assets/Scripts/: DumPointClouds.cs  GSViewer.cs  NetworkPayloads.cs  SplatbusMessageClient.cs  TcpJsonSender.cs  UnityDataSender.cs  Utils.cs
clients/Unity-client/UnityProject/ProjectSettings/: EditorBuildSettings.asset
examples/: 3DGS.diff  GaussianAvatar.diff  README.md  client_test.py  ipc_test.py
examples/3dgs/: splatbus_renderer.py
examples/4dgs/: splatbus_renderer.py
examples/gaussian-avatar/: splatbus_renderer.py
gs_ipc/: renderer.py
gs_ipc/core/: cuda_buffer.py  ipc_channel.py  ipc_handles.py  message_channel.py  utils.py
splatbus/: .gitignore  README.md  pyproject.toml
splatbus/examples/: client_test.py  server_test.py
splatbus/splatbus/: __init__.py  camera.py  client.py  renderer.py
splatbus/splatbus/core/: BaseSocket.py  client_buffer.py  cuda_utils.py  ipc_channel.py  ipc_handles.py  message_channel.py  shared_buffer.py
