[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs-ipc"
version = "0.1.0"
description = "IPC Package for Gaussian Splatting with CUDA support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["gaussian-splatting", "ipc", "cuda", "rendering"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "torch>=2.0.0",
    "loguru>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/RockyXu66/gs-ipc"
Repository = "https://github.com/RockyXu66/gs-ipc"
Issues = "https://github.com/RockyXu66/gs-ipc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gs_ipc*"]
exclude = ["tests*", "docs*"]

