[project]
name = "opengl-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.14"
dependencies = [
    "imgui-bundle<=1.6.3",
    "moderngl-window[glfw,imgui]>=3.1",
    "pyrr>=0.10.3",
    "rich>=14.3.2",
    "torch>=2.10.0",
]

[dependency-groups]
dev = [
    "splatbus",
]

[tool.uv.sources]
splatbus = { path = "../../splatbus" }
